--- a/Acme-SF-D04-24.5.0/.settings/org.eclipse.wst.common.component
+++ b/Acme-SF-D04-24.5.0/.settings/org.eclipse.wst.common.component
@@ -295,7 +295,7 @@
         
         
         
-        <property name="java-output-path" value="/Hello-World-22.0/target/classes"/>
+        <property name="java-output-path" value="/Acme-SF-D04-24.5.0/target/classes"/>
         <property name="context-root" value="Acme-SF-D04"/>
                                                                                                                                                                                                                                                                                                                                                                                                                             
     
